@@ -13,6 +13,10 @@
 <?php
 	db_connect( $g_hostname, $g_db_username, $g_db_password, $g_database_name );
 
+	if ( OFF == $g_allow_account_delete ) {
+		print_header_redirect( $g_account_page );
+	}
+
 	# get protected state
 	$t_protected = get_current_user_field( "protected" );
 
