@@ -1128,6 +1128,14 @@ Some variables function as toggles (On/Off).  Unless otherwise noted 0 is Off an
 	</td>
 </tr>
 <tr>
+	<td width="20%" bgcolor="#ddddff">
+		$g_allow_account_delete
+	</td>
+	<td width="80%" bgcolor="#ffffff">
+		Allow users to delete their own accounts.
+	</td>
+</tr>
+<tr>
 	<td colspan="2" bgcolor="#eeeeee">
 		Access level needed to re-open bugs.  Look in the constant_inc.php file if you want to set a different value.
 	</td>
